feat(waybar): remove some modules

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,6 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Maple Mono NF CN, FontAwesome, sans-serif;
-    font-size: 13px;
+    font-family: Cozette, Maple Mono NF CN, sans-serif;
+    font-size: 12px;
 }
 
 window#waybar {
@@ -77,8 +76,11 @@ button:hover {
     box-shadow: inset 0 -3px #ffffff;
 }
 
+#battery.warning {
+    background: orange;
+}
+
 #clock,
-#battery,
 #cpu,
 #memory,
 #disk,
@@ -104,12 +106,12 @@ button:hover {
 }
 
 /* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
+.modules-left>widget:first-child>#workspaces {
     margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
+.modules-right>widget:last-child>#workspaces {
     margin-right: 0;
 }
 
@@ -122,7 +124,8 @@ button:hover {
     color: #000000;
 }
 
-#battery.charging, #battery.plugged {
+#battery.charging,
+#battery.plugged {
     color: #ffffff;
     background-color: #26A65B;
 }
@@ -238,11 +241,11 @@ label:focus {
     background-color: #2980b9;
 }
 
-#tray > .passive {
+#tray>.passive {
     -gtk-icon-effect: dim;
 }
 
-#tray > .needs-attention {
+#tray>.needs-attention {
     -gtk-icon-effect: highlight;
     background-color: #eb4d4b;
 }
@@ -289,11 +292,11 @@ label:focus {
     min-width: 16px;
 }
 
-#keyboard-state > label {
+#keyboard-state>label {
     padding: 0 5px;
 }
 
-#keyboard-state > label.locked {
+#keyboard-state>label.locked {
     background: rgba(0, 0, 0, 0.2);
 }
 
@@ -302,7 +305,7 @@ label:focus {
 }
 
 #scratchpad.empty {
-	background-color: transparent;
+    background-color: transparent;
 }
 
 #privacy {
